# inspector-http

./: .gitignore  .release.toml  CHANGELOG.md  Cargo.toml  DEPLOYMENT.md  LICENSE-MIT  README.md  sample.http
.github/workflows/: release-plz.yml  release.yml
src/: main.rs  request_detail.rs  request_overview.rs  response_config.rs
